--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -410,8 +410,51 @@
     <ClInclude Include="..\public\string_t.h" />
     <ClInclude Include="..\public\studio.h" />
     <ClInclude Include="..\core\resource.h" />
+    <ClInclude Include="..\public\tier0\annotations.h" />
+    <ClInclude Include="..\public\tier0\basetypes.h" />
+    <ClInclude Include="..\public\tier0\commonmacros.h" />
+    <ClInclude Include="..\public\tier0\dbg.h" />
+    <ClInclude Include="..\public\tier0\dbgflag.h" />
+    <ClInclude Include="..\public\tier0\fasttimer.h" />
+    <ClInclude Include="..\public\tier0\frametask.h" />
+    <ClInclude Include="..\public\tier0\jobthread.h" />
+    <ClInclude Include="..\public\tier0\memalloc.h" />
     <ClInclude Include="..\public\tier0\memdbgon.h" />
+    <ClInclude Include="..\public\tier0\platform.h" />
+    <ClInclude Include="..\public\tier0\platform_internal.h" />
+    <ClInclude Include="..\public\tier0\threadtools.h" />
+    <ClInclude Include="..\public\tier0\tslist.h" />
+    <ClInclude Include="..\public\tier0\valve_off.h" />
+    <ClInclude Include="..\public\tier0\valve_on.h" />
+    <ClInclude Include="..\public\tier0\wchartypes.h" />
+    <ClInclude Include="..\public\tier1\bitbuf.h" />
+    <ClInclude Include="..\public\tier1\byteswap.h" />
+    <ClInclude Include="..\public\tier1\characterset.h" />
+    <ClInclude Include="..\public\tier1\cmd.h" />
+    <ClInclude Include="..\public\tier1\cvar.h" />
+    <ClInclude Include="..\public\tier1\generichash.h" />
     <ClInclude Include="..\public\tier1\lzss.h" />
+    <ClInclude Include="..\public\tier1\mempool.h" />
+    <ClInclude Include="..\public\tier1\memstack.h" />
+    <ClInclude Include="..\public\tier1\NetAdr.h" />
+    <ClInclude Include="..\public\tier1\NetKey.h" />
+    <ClInclude Include="..\public\tier1\stringpool.h" />
+    <ClInclude Include="..\public\tier1\strtools.h" />
+    <ClInclude Include="..\public\tier1\utlblockmemory.h" />
+    <ClInclude Include="..\public\tier1\utlbuffer.h" />
+    <ClInclude Include="..\public\tier1\utldict.h" />
+    <ClInclude Include="..\public\tier1\utlfixedmemory.h" />
+    <ClInclude Include="..\public\tier1\utllinkedlist.h" />
+    <ClInclude Include="..\public\tier1\utlmap.h" />
+    <ClInclude Include="..\public\tier1\utlmemory.h" />
+    <ClInclude Include="..\public\tier1\utlrbtree.h" />
+    <ClInclude Include="..\public\tier1\utlstring.h" />
+    <ClInclude Include="..\public\tier1\utlsymbol.h" />
+    <ClInclude Include="..\public\tier1\utlvector.h" />
+    <ClInclude Include="..\public\tier2\curlutils.h" />
+    <ClInclude Include="..\public\tier2\meshutils.h" />
+    <ClInclude Include="..\public\tier2\renderutils.h" />
+    <ClInclude Include="..\public\tier2\socketcreator.h" />
     <ClInclude Include="..\public\trace.h" />
     <ClInclude Include="..\public\utility\binstream.h" />
     <ClInclude Include="..\public\utility\memaddr.h" />
@@ -512,50 +555,11 @@
     <ClInclude Include="..\thirdparty\nlohmann\ordered_map.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\thirdparty\hedley\hedley.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\thirdparty\hedley\hedley_undef.hpp" />
-    <ClInclude Include="..\tier0\annotations.h" />
-    <ClInclude Include="..\tier0\basetypes.h" />
     <ClInclude Include="..\tier0\commandline.h" />
-    <ClInclude Include="..\tier0\commonmacros.h" />
     <ClInclude Include="..\tier0\cpu.h" />
     <ClInclude Include="..\tier0\cputopology.h" />
     <ClInclude Include="..\tier0\crashhandler.h" />
-    <ClInclude Include="..\tier0\dbg.h" />
-    <ClInclude Include="..\tier0\dbgflag.h" />
-    <ClInclude Include="..\tier0\fasttimer.h" />
-    <ClInclude Include="..\tier0\frametask.h" />
-    <ClInclude Include="..\tier0\jobthread.h" />
-    <ClInclude Include="..\tier0\memalloc.h" />
     <ClInclude Include="..\tier0\memstd.h" />
-    <ClInclude Include="..\tier0\platform.h" />
-    <ClInclude Include="..\tier0\platform_internal.h" />
-    <ClInclude Include="..\tier0\threadtools.h" />
-    <ClInclude Include="..\tier0\tslist.h" />
-    <ClInclude Include="..\tier0\valve_off.h" />
-    <ClInclude Include="..\tier0\valve_on.h" />
-    <ClInclude Include="..\tier0\wchartypes.h" />
-    <ClInclude Include="..\tier1\bitbuf.h" />
-    <ClInclude Include="..\tier1\byteswap.h" />
-    <ClInclude Include="..\tier1\characterset.h" />
-    <ClInclude Include="..\tier1\cmd.h" />
-    <ClInclude Include="..\tier1\cvar.h" />
-    <ClInclude Include="..\tier1\generichash.h" />
-    <ClInclude Include="..\tier1\mempool.h" />
-    <ClInclude Include="..\tier1\NetAdr.h" />
-    <ClInclude Include="..\tier1\NetKey.h" />
-    <ClInclude Include="..\tier1\strtools.h" />
-    <ClInclude Include="..\tier1\utlblockmemory.h" />
-    <ClInclude Include="..\tier1\utlbuffer.h" />
-    <ClInclude Include="..\tier1\utldict.h" />
-    <ClInclude Include="..\tier1\utlfixedmemory.h" />
-    <ClInclude Include="..\tier1\utllinkedlist.h" />
-    <ClInclude Include="..\tier1\utlmemory.h" />
-    <ClInclude Include="..\tier1\utlrbtree.h" />
-    <ClInclude Include="..\tier1\utlstring.h" />
-    <ClInclude Include="..\tier1\utlvector.h" />
-    <ClInclude Include="..\tier2\curlutils.h" />
-    <ClInclude Include="..\tier2\meshutils.h" />
-    <ClInclude Include="..\tier2\renderutils.h" />
-    <ClInclude Include="..\tier2\socketcreator.h" />
     <ClInclude Include="..\vguimatsurface\MatSystemSurface.h" />
     <ClInclude Include="..\vgui\vgui_baseui_interface.h" />
     <ClInclude Include="..\vgui\vgui_debugpanel.h" />
