--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -238,6 +238,9 @@
     <Filter Include="sdk\public\tier1">
       <UniqueIdentifier>{676c3f77-36b9-44e8-a0d2-ff5ed6a8040e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\public\tier2">
+      <UniqueIdentifier>{42a3745e-8686-4f83-97bd-cec9336b4937}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\vengineclient_impl.cpp">
@@ -815,9 +818,6 @@
     <ClInclude Include="..\thirdparty\detours\include\detours.h">
       <Filter>thirdparty\detours\include</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier0\basetypes.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
     <ClInclude Include="..\vgui\vgui_fpspanel.h">
       <Filter>sdk\vgui</Filter>
     </ClInclude>
@@ -931,9 +931,6 @@
     </ClInclude>
     <ClInclude Include="..\mathlib\swap.h">
       <Filter>sdk\mathlib</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier2\socketcreator.h">
-      <Filter>sdk\tier2</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\sha256.h">
       <Filter>sdk\mathlib</Filter>
@@ -1100,12 +1097,6 @@
     <ClInclude Include="..\materialsystem\cmaterialglue.h">
       <Filter>sdk\materialsystem</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier0\fasttimer.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\platform.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
     <ClInclude Include="..\tier0\cputopology.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
@@ -1124,15 +1115,6 @@
     <ClInclude Include="..\public\inetchannel.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier1\utlmemory.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utlvector.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\bitbuf.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
     <ClInclude Include="..\game\client\c_baseentity.h">
       <Filter>sdk\game\client</Filter>
     </ClInclude>
@@ -1141,12 +1123,6 @@
     </ClInclude>
     <ClInclude Include="..\filesystem\basefilesystem.h">
       <Filter>sdk\filesystem</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\cmd.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\cvar.h">
-      <Filter>sdk\tier1</Filter>
     </ClInclude>
     <ClInclude Include="..\vstdlib\completion.h">
       <Filter>sdk\vstdlib</Filter>
@@ -1166,14 +1142,8 @@
     <ClInclude Include="..\vstdlib\callback.h">
       <Filter>sdk\vstdlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier0\tslist.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
     <ClInclude Include="..\launcher\launcher.h">
       <Filter>sdk\launcher</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\jobthread.h">
-      <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="..\windows\resource.h">
       <Filter>windows</Filter>
@@ -1217,17 +1187,11 @@
     <ClInclude Include="..\public\ivrenderview.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier0\threadtools.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
     <ClInclude Include="..\game\shared\animation.h">
       <Filter>sdk\game\shared</Filter>
     </ClInclude>
     <ClInclude Include="..\public\icliententitylist.h">
       <Filter>sdk\public</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utldict.h">
-      <Filter>sdk\tier1</Filter>
     </ClInclude>
     <ClInclude Include="..\public\client_class.h">
       <Filter>sdk\public</Filter>
@@ -1370,9 +1334,6 @@
     <ClInclude Include="..\engine\packed_entity.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier1\mempool.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
     <ClInclude Include="..\public\inetmsghandler.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
@@ -1403,27 +1364,6 @@
     <ClInclude Include="..\public\iserver.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier0\wchartypes.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\valve_off.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\valve_on.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\dbg.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\dbgflag.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\strtools.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\commonmacros.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
     <ClInclude Include="..\vpc\kvleaktrace.h">
       <Filter>sdk\vpc</Filter>
     </ClInclude>
@@ -1432,9 +1372,6 @@
     </ClInclude>
     <ClInclude Include="..\mathlib\sha1.h">
       <Filter>sdk\mathlib</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\platform_internal.h">
-      <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="..\public\icommandline.h">
       <Filter>sdk\public</Filter>
@@ -1477,12 +1414,6 @@
     </ClInclude>
     <ClInclude Include="..\mathlib\ssequaternion.h">
       <Filter>sdk\mathlib</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier2\renderutils.h">
-      <Filter>sdk\tier2</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier2\meshutils.h">
-      <Filter>sdk\tier2</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\fltx4.h">
       <Filter>sdk\mathlib</Filter>
@@ -1538,17 +1469,8 @@
     <ClInclude Include="..\public\icvar.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier1\characterset.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
     <ClInclude Include="..\public\worldsize.h">
       <Filter>sdk\public</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utlblockmemory.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\memalloc.h">
-      <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="..\public\iengine.h">
       <Filter>sdk\public</Filter>
@@ -1571,29 +1493,14 @@
     <ClInclude Include="..\networksystem\bansystem.h">
       <Filter>sdk\networksystem</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier1\generichash.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utlrbtree.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utlfixedmemory.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
     <ClInclude Include="..\public\ifilesystem.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\public\ifile.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier0\annotations.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
     <ClInclude Include="..\vstdlib\concommandhash.h">
       <Filter>sdk\vstdlib</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utllinkedlist.h">
-      <Filter>sdk\tier1</Filter>
     </ClInclude>
     <ClInclude Include="..\public\isurfacesystem.h">
       <Filter>sdk\public</Filter>
@@ -1606,9 +1513,6 @@
     </ClInclude>
     <ClInclude Include="..\public\isnapshotmgr.h">
       <Filter>sdk\public</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\frametask.h">
-      <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="..\public\iframetask.h">
       <Filter>sdk\public</Filter>
@@ -1660,12 +1564,6 @@
     </ClInclude>
     <ClInclude Include="..\public\datamap.h">
       <Filter>sdk\public</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\byteswap.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utlbuffer.h">
-      <Filter>sdk\tier1</Filter>
     </ClInclude>
     <ClInclude Include="..\public\ipackedstore.h">
       <Filter>sdk\public</Filter>
@@ -1826,12 +1724,6 @@
     <ClInclude Include="..\launcher\prx.h">
       <Filter>sdk\launcher</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier2\curlutils.h">
-      <Filter>sdk\tier2</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\NetAdr.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
     <ClInclude Include="..\engine\server\sv_rcon.h">
       <Filter>sdk\engine\server</Filter>
     </ClInclude>
@@ -1859,12 +1751,6 @@
     <ClInclude Include="..\thirdparty\nlohmann\detail\abi_macros.hpp">
       <Filter>thirdparty\nlohmann\detail</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier1\NetKey.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\utlstring.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
     <ClInclude Include="..\thirdparty\imgui\misc\imgui_utility.h">
       <Filter>thirdparty\imgui\misc</Filter>
     </ClInclude>
@@ -1876,6 +1762,135 @@
     </ClInclude>
     <ClInclude Include="..\public\tier1\lzss.h">
       <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\fasttimer.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\frametask.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\jobthread.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\memalloc.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\platform.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\platform_internal.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\threadtools.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\tslist.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\valve_off.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\valve_on.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\wchartypes.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\annotations.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\basetypes.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\commonmacros.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\dbg.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\dbgflag.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\cvar.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\generichash.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\mempool.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\memstack.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\NetAdr.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\NetKey.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\stringpool.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\strtools.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlblockmemory.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlbuffer.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utldict.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlfixedmemory.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utllinkedlist.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlmap.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlmemory.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlrbtree.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlstring.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlsymbol.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\utlvector.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\bitbuf.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\byteswap.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\characterset.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier1\cmd.h">
+      <Filter>sdk\public\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier2\meshutils.h">
+      <Filter>sdk\public\tier2</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier2\renderutils.h">
+      <Filter>sdk\public\tier2</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier2\socketcreator.h">
+      <Filter>sdk\public\tier2</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier2\curlutils.h">
+      <Filter>sdk\public\tier2</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
