Update VPK build scripts
* Added 'mp_rr_party_crasher'.
* Renamed 'mp_lobby' to 'mp_common' for server.

--- a/r5dev/resource/cfg/englishclient_extract_vpk.cfg
+++ b/r5dev/resource/cfg/englishclient_extract_vpk.cfg
@@ -12,3 +12,4 @@ fs_vpk_unpack "vpk/englishclient_mp_rr_canyonlands_staging.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k_nx.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k_tt.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_party_crasher.bsp.pak000_dir.vpk"
