--- a/r5dev/resource/cfg/englishserver_build_vpk.cfg
+++ b/r5dev/resource/cfg/englishserver_build_vpk.cfg
@@ -1,4 +1,4 @@
-fs_vpk_build "english" "server" "mp_lobby" "1"
+fs_vpk_build "english" "server" "mp_common" "1"
 fs_vpk_build "english" "server" "mp_rr_aqueduct" "1"
 fs_vpk_build "english" "server" "mp_rr_aqueduct_night" "1"
 fs_vpk_build "english" "server" "mp_rr_arena_composite" "1"
@@ -11,3 +11,4 @@ fs_vpk_build "english" "server" "mp_rr_canyonlands_staging" "1"
 fs_vpk_build "english" "server" "mp_rr_desertlands_64k_x_64k" "1"
 fs_vpk_build "english" "server" "mp_rr_desertlands_64k_x_64k_nx" "1"
 fs_vpk_build "english" "server" "mp_rr_desertlands_64k_x_64k_tt" "1"
+fs_vpk_build "english" "server" "mp_rr_party_crasher" "1"
