--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1131,6 +1131,12 @@
     <ClInclude Include="..\public\tier0\dbg.h">
       <Filter>sdk\public\tier0</Filter>
     </ClInclude>
+    <ClInclude Include="..\mathlib\bitvec.h">
+      <Filter>sdk\mathlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\tier0\memdbgoff.h">
+      <Filter>sdk\public\tier0</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
