--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -315,6 +315,7 @@
     <ClInclude Include="..\materialsystem\cshaderglue.h" />
     <ClInclude Include="..\mathlib\adler32.h" />
     <ClInclude Include="..\mathlib\almostequal.cpp" />
+    <ClInclude Include="..\mathlib\bitvec.h" />
     <ClInclude Include="..\mathlib\compressed_vector.h" />
     <ClInclude Include="..\mathlib\fbits.h" />
     <ClInclude Include="..\mathlib\color.h" />
@@ -419,6 +420,7 @@
     <ClInclude Include="..\public\tier0\frametask.h" />
     <ClInclude Include="..\public\tier0\jobthread.h" />
     <ClInclude Include="..\public\tier0\memalloc.h" />
+    <ClInclude Include="..\public\tier0\memdbgoff.h" />
     <ClInclude Include="..\public\tier0\memdbgon.h" />
     <ClInclude Include="..\public\tier0\platform.h" />
     <ClInclude Include="..\public\tier0\platform_internal.h" />
